feat: add client needs analysis

--- a/work_phase_2/client_needs_analysis.html
+++ b/work_phase_2/client_needs_analysis.html
@@ -32,9 +32,10 @@
                 <h3>About Us</h3>
                 <p>
                     We are a non-profit organisation dedicated to fostering
-                    social cohesion by empowering diverse communities to share
-                    their stories, <span class="interactive-highlight-stories" data-card="Value 1">connect with others
-                    </span>, and access resources
+                    social cohesion by <span class="interactive-highlight-stories" data-card="Value 1">empowering
+                        diverse communities to share
+                        their stories, connect with others
+                        , and access resources </span>
                     that enhance their visibility and influence. Our mission is
                     to strengthen societal bonds by creating platforms that
                     celebrate and support the unique identities of communities
@@ -42,7 +43,6 @@
                 </p>
                 <p>
                     This brief has been prepared for the internal design teams
-                    Week 5: Design Research | Creating your Client Needs Analysis Web Page
                     at Connect Communities Initiative (CCI). Each design team is
                     tasked with developing individual concepts and prototypes
                     for dynamic websites that align with CCI's mission and
@@ -53,14 +53,16 @@
                 <h3>Project Overview</h3>
                 <p>
                     We are commissioning the development of dynamic,
-                    user-friendly websites that represent and support different
-                    communities. Each website should serve as a central hub
+                    user-friendly websites that represent and <span class="interactive-highlight-stories"
+                        data-card="Value 2"> support different
+                        communities</span>. Each website should serve as a central hub
                     where community members can share resources, highlight
-                    events, and foster meaningful connections. The websites must
-                    not include any form of commercial activity, such as
-                    advertising or selling products. However, it is acceptable
-                    to promote resources, events, or services that are directly
-                    beneficial to the community.
+                    events, and foster meaningful connections.<span class="interactive-highlight-stories"
+                        data-card="Value 2">The websites must
+                        not include any form of commercial activity, such as
+                        advertising or selling products. However, it is acceptable
+                        to promote resources, events, or services that are directly
+                        beneficial to the community.</span>
                 </p>
                 <p>
                     The websites must be accessible, mobile-friendly, and
@@ -94,14 +96,15 @@
                         Lived Experience Communities
                     </li>
                     <li>
-                        Food and Culinary Communities
+                        <span class="interactive-highlight-stories" data-card="Value 1">
+                            Food and Culinary Communities
+                        </span>
                     </li>
                     <li>
                         Tech and Innovation Communities
                     </li>
                 </ul>
-                <h3>Additional Information</h3>
-                <h3>Target Audience</h3>
+                <h3 class="p-t-2">Target Audience</h3>
                 <p>Each website must serve two key groups:</p>
                 <ul>
                     <li>
@@ -141,75 +144,107 @@
                     </li>
                 </ul>
 
-                <h3 class="p-b-6">Values - Needs - Feature Analysis</h3>
+                <h3 class="p-t-4">Values - Needs - Feature Analysis</h3>
 
                 <div class="value-box">
-                    <h3>Value 1: Community Connection</h3>
+                    <h3>Value 1: Encourage diverse communities to connect with each other</h3>
 
                     <div class="flip-card-container">
                         <div class="flip-card">
                             <div class=" flip-card-inner">
                                 <div class="flip-card-front">
                                     <p><strong>Card 1</strong></p>
-                                    <p>User needs to easily find and connect with others in their community.
+                                    <p>Users can easily find and connect with their own and other commnunities
                                     </p>
                                 </div>
                                 <div class="flip-card-back">
-                                    <p><strong>
-                                            Suggested Feature: Community Forums or Chat Rooms
-                                        </strong></p>
-                                    <p>
-                                        Implement interactive forums or chat rooms where
-                                        community members can engage in discussions, share
-                                        experiences, and support each other. This feature
-                                        should be moderated to ensure a safe and respectful
-                                        environment.
-                                    </p>
+                                    <ul>
+                                        <li>
+                                            <p>Feature to post, share, promote, join, and interact with resources made
+                                                by
+                                                other
+                                                people
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                Role Based Access Control between community representative and general
+                                                audience
+                                            </p>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="flip-card">
                             <div class=" flip-card-inner">
                                 <div class="flip-card-front">
-                                    <p><strong>Card 1</strong></p>
-                                    <p>User needs to easily find and connect with others in their community.
+                                    <p><strong>Card 2</strong></p>
+                                    <p>Easy user experience regardless of the user’s tech savvyness
                                     </p>
                                 </div>
                                 <div class="flip-card-back">
-                                    <p><strong>
-                                            Suggested Feature: Community Forums or Chat Rooms
-                                        </strong></p>
-                                    <p>
-                                        Implement interactive forums or chat rooms where
-                                        community members can engage in discussions, share
-                                        experiences, and support each other. This feature
-                                        should be moderated to ensure a safe and respectful
-                                        environment.
-                                    </p>
+                                    <ul>
+                                        <li>
+                                            <p>
+                                                User-Centric Recommendation Engine to make users easier to find their
+                                                own commmunities and other communities
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                Simple yet intuitive design and navigation
+                                            </p>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="flip-card">
                             <div class=" flip-card-inner">
                                 <div class="flip-card-front">
-                                    <p><strong>Card 1</strong></p>
-                                    <p>User needs to easily find and connect with others in their community.
+                                    <p><strong>Card 3</strong></p>
+                                    <p>Various Food, Beverages, and Culinary oriented informations
                                     </p>
                                 </div>
                                 <div class="flip-card-back">
-                                    <p><strong>
-                                            Suggested Feature: Community Forums or Chat Rooms
-                                        </strong></p>
                                     <p>
-                                        Implement interactive forums or chat rooms where
-                                        community members can engage in discussions, share
-                                        experiences, and support each other. This feature
-                                        should be moderated to ensure a safe and respectful
-                                        environment.
+                                        Food, beverages, and culinaries oriented newsletter subscription (non-paid
+                                        feature) features such
+                                        as traditional food recipes, and healthy meals planning.
+
                                     </p>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="value-box">
+                    <h3>Value 2: Non-profit and inclusive oriented</h3>
+                    <div class="flip-card-container">
+                        <div class="flip-card">
+                            <div class=" flip-card-inner">
+                                <div class="flip-card-front">
+                                    <p><strong>Card 1</strong></p>
+                                    <p>Ethical, inclusive, and culturally sensitive design
+                                    </p>
+                                </div>
+                                <div class="flip-card-back">
+                                    <ul>
+                                        <li>
+                                            <p>Dynamic Responsiveness (Mobile, Desktop, Tablet)</p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                WCAG 2.2 Level AA standards, ensuring that navigation, text
+                                                alternatives, and other features are accessible to all users freely
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
