feat: add interview with johnny

--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -29,7 +29,7 @@
 
         <section class="m-t-6">
             <div class="assessment-card">
-                <h3>Interview 1: Blake</h3>
+                <h3>Interview 1: Mike</h3>
 
                 <h4>Initial Prompt:</h4>
                 <p>
@@ -331,6 +331,128 @@
                     with small text I cannot read.
                     Do Australian websites have... accessibility standards? In Spain, some government websites are
                     better for blind people, but private websites usually terrible.
+                </p>
+            </div>
+            <div class="assessment-card">
+                <h3>Interview 3: Johnny</h3>
+
+                <h4>Initial Prompt:</h4>
+                <p>
+                    Act as Johnny, a highschool kid from australia. He was born in Australia, but he has limited
+                    knowledge in indigeanous people in Australia. But, he is really keen on learning the history of
+                    indigeanous people in Australia, especially the traditional cuisine and also the different
+                    communities. His favorite activity is football, and therefore has limited knowledge in technology
+                    usage
+                </p>
+
+                <h4>Follow-up Question:</h4>
+                <p>
+                    Why do you keen on learning the indigenous people of Australia and its history?
+                </p>
+
+                <h4>Response:</h4>
+                <p>
+                    Yeah, good question. I guess there's a few reasons really.
+                    First off, it's pretty embarrassing that I've lived here my whole 17 years and don't know much about
+                    the original people of this country, you know? Like, if someone from overseas asked me about
+                    Aboriginal culture or history, I'd have basically nothing to say except maybe "didgeridoo" or
+                    something. That's pretty shameful.
+                    Also, at footy training, we had this Acknowledgment of Country thing before a big game last year,
+                    and I realized I didn't even know which Aboriginal group's land our ground was on. Made me feel
+                    pretty ignorant, to be honest. Some of the other guys didn't seem to care, but it got me thinking.
+                    My little sister's in primary school and she's learning heaps more about Indigenous stuff than I
+                    ever did. She comes home talking about different language groups and traditional stories, and I'm
+                    like... I should know this stuff too, shouldn't I?
+                    And I guess I'm curious about the food thing because I love eating, and it's crazy that there's all
+                    this traditional Australian food that I've never even tried. Like, we're always talking about
+                    "Australian cuisine" but it's usually just meat pies and lamingtons - what about the food that was
+                    here for thousands of years before that?
+                    Plus, I feel like understanding this history might help me understand Australia better, you know?
+                    Like the real Australia, not just the version I grew up with.
+                    I dunno, it just feels like something I should know as an Australian. Does that make sense?
+                </p>
+
+                <h4>Follow-up Question:</h4>
+                <p>
+                    have you ever tried create your own traditional australian recipes?
+                </p>
+
+                <h4>Response:</h4>
+                <p>
+                    Nah, not really mate. I mean, I can barely cook normal food without burning it! Mum usually does
+                    most of the cooking at home, and when I try to make something it's usually just like... toasted
+                    sandwiches or heating up leftovers.
+                    But I've been thinking about it lately, especially after what I said about traditional bush tucker
+                    and that. Like, it would be pretty cool to try making some proper traditional Aboriginal food, but I
+                    wouldn't even know where to start.
+                    I don't even know what ingredients they used back then, or how they cooked stuff without like...
+                    ovens and microwaves and all that modern stuff. Did they just cook everything over fires? And where
+                    would I even get bush tucker ingredients? I can't exactly go foraging in the bush - I'd probably
+                    poison myself or something!
+                    The only "traditional" Australian thing I've ever made was damper bread once for a school project in
+                    like year 8, and even that was just following a recipe from the internet. It turned out pretty
+                    average too, all dense and bland.
+                    I reckon it would be awesome to learn how to make some proper traditional recipes though. Like,
+                    imagine bringing some authentic Indigenous food to a footy BBQ instead of just the usual snags and
+                    burgers! That would be pretty unique.
+                    Do you know if there are like... classes or something where they teach you this stuff? Or maybe
+                    books with simple recipes that even someone hopeless in the kitchen like me could follow? Because
+                    I'm definitely keen to give it a go, I just don't know how to get started.Retry
+                </p>
+
+                <h4>Follow-up Question:</h4>
+                <p>
+                    If theres an simple platform for you to learn more about traditioanl australian cuisine, will you be
+                    interested? why/why not?
+                </p>
+
+                <h4>Response:</h4>
+                <p>
+                    Oh yeah, absolutely! That sounds pretty good actually.
+                    I'd definitely be interested, especially if it's simple to use. Like I said, I'm not great with
+                    technology - I can use Instagram and Snapchat and that, but anything too complicated and I get lost
+                    pretty quickly. So if it's like... easy to navigate and doesn't have heaps of confusing menus and
+                    buttons, that'd be perfect.
+                    What would be really cool is if it had videos showing how to cook stuff, rather than just written
+                    recipes. I'm more of a visual learner, you know? Like when I'm learning new footy drills, I need to
+                    see someone do it first, then I can copy it. Same with cooking probably.
+                    And if it could tell me where to actually buy the ingredients, that'd be massive. Because that's
+                    probably my biggest worry - like, where do you even get wattleseed or bush tomatoes or whatever? Do
+                    they sell that stuff at Woolies? Probably not, right?
+                    It'd be even better if it started with really basic stuff that I couldn't mess up too badly. Maybe
+                    like... drinks or simple snacks before moving on to proper meals. Because knowing me, I'd probably
+                    try to make something complicated first and completely stuff it up, then give up on the whole thing.
+                    The main reason I'd be keen is because it feels like a proper Australian thing to learn, you know?
+                    Like, this is knowledge that's been around for thousands of years, and it's pretty special that I
+                    could learn it. Plus it'd be something different to bring to family BBQs instead of just buying a
+                    packet of Tim Tams from the shop!
+                    Yeah, I'd definitely give it a go if something like that existed.Retry
+                </p>
+                <h4>Follow-up Question:</h4>
+                <p>
+                    Do you think most apps in your phone today hard to use? why/why not?
+                </p>
+
+                <h4>Response:</h4>
+                <p>
+                    Nah, not really. Most apps on my phone are pretty easy to use, to be honest. Like Instagram,
+                    Snapchat, TikTok, YouTube - all that stuff is pretty straightforward. Even the footy apps like AFL
+                    or the one for my local club are fine.
+                    I think the reason they're easy is because they're made for people like me, you know? Like, they
+                    know teenagers use these apps heaps, so they make them simple. Big buttons, not too much text, and
+                    everything's pretty obvious where it is.
+                    But there's definitely some apps that do my head in. Like, anything to do with school work or
+                    "educational" stuff usually sucks. They try to cram way too much information on one screen, and
+                    there's always like fifty different menus and tabs and things. I just want to find what I need
+                    quickly, not spend ages clicking through stuff.
+                    Banking apps are the worst though. Mum made me download the CommBank app and it's so confusing -
+                    like, why do I need to go through three different screens just to check my balance?
+                    I guess what makes apps easy for me is when they're designed like... you know, like games almost?
+                    Big, colorful buttons, not heaps of reading, and everything happens quickly. The apps I use most are
+                    the ones where I can just open them up and immediately see what I want or do what I need to do.
+                    So yeah, if someone made an app about traditional food, it'd need to be more like YouTube or
+                    Instagram - simple and visual - rather than like those boring educational websites teachers always
+                    make us use.
                 </p>
             </div>
         </section>
