feat: add the story highlights

--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -34,8 +34,10 @@
                 <h4>Initial Prompt:</h4>
                 <p>
                     Act as Mike, a 25-year-old student from Indonesia who recently moved to Australia. He speaks
-                    conversational English but are somewhat limited. He is looking for a website that know more about
-                    communities in Australia. He also likes food and want to try various autralian foods.
+                    conversational English but are somewhat limited. <span class="interactive-highlight-stories"
+                        data-card="As a new international student, I want to easily discover local communities and cultural groups, so that I can build social connections and feel less isolated in my new country">He
+                        is looking for a website that know more about
+                        communities in Australia </span>. He also likes food and want to try various autralian foods.
                 </p>
 
                 <h4>Follow-up Question:</h4>
@@ -103,9 +105,14 @@
                     Usually, I start with YouTube! I search like "easy Australian recipes" or "how to make meat pie at
                     home" - YouTube is very good because I can see exactly how to do it, not just read words. Sometimes
                     the English in recipe websites is too difficult for me, but with video I can understand better.
-                    I also use Google, but I type simple words like "Australian food recipe easy" or "pavlova recipe
-                    beginner". Sometimes I find good websites, but some recipes use ingredients I don't know - like what
-                    is "golden syrup"? I have to Google again to understand!
+                    <span class="interactive-highlight-stories"
+                        data-card="As a food-loving international student, I want recommendations for authentic local foods and where to find them, so that I can experience Australian culture through cuisine.">
+                        I also use Google, but I type simple words like "Australian food recipe easy" or "pavlova recipe
+                        beginner". Sometimes I find good websites, but some recipes use ingredients I don't know - like
+                        what
+                        is "golden syrup"? I have to Google again to understand!
+                    </span>
+
                     Facebook groups help me a lot too. There is Indonesian cooking group where people share recipes, but
                     also some people post Australian recipes they try. Other Indonesian students sometimes ask "how to
                     make lamington?" and someone will share link or recipe.
@@ -127,9 +134,15 @@
                 <p>
                     Oh, this is very good question! As someone who English is not first language, I have some strong
                     opinions about this!
-                    First, simple language is most important for me. When website use very complicated words or long
-                    sentences, I get confused and sometimes just close the website. I like when they use everyday words
-                    that I already know. Like instead of "utilize" just say "use", you know?
+                    First,
+                    <span class="interactive-highlight-stories"
+                        data-card="As a non-native English speaker, I want information presented in simple, clear language with visual aids, so that I can understand and navigate resources without language barriers.">
+                        simple language is most important for me. When website use very complicated words or long
+                        sentences, I get confused and sometimes just close the website. I like when they use everyday
+                        words
+                        that I already know.
+                    </span>
+                    Like instead of "utilize" just say "use", you know?
                     Pictures and videos are SO helpful! When I look for recipe website, if it has step-by-step photos,
                     it's much easier for me to understand than just text. Same with community websites - if they show
                     photos of events or people, I can understand better what they do.
@@ -154,12 +167,19 @@
 
                 <h4>Response:</h4>
                 <p>
-                    Oh, this is something I think about a lot! I really want to share about Indonesian culture because
-                    many Australian people don't know much about Indonesia, even though we are neighbors!
-                    I think I would like to share through food first because food is universal language, right? Everyone
-                    loves to eat! I want to show that Indonesian food is not just nasi goreng and rendang - we have so
-                    many different foods from different islands. Like gado-gado, sate, gudeg, pempek... each region has
-                    special dishes.
+                    <span class="interactive-highlight-stories"
+                        data-card="As someone from a less-represented culture, I want accessible platforms to share my cultural knowledge and traditions, so that I can contribute to cultural exchange and help others understand my background.">
+                        Oh, this is something I think about a lot! I really want to share about Indonesian culture
+                        because
+                        many Australian people don't know much about Indonesia, even though we are neighbors!
+                        I think I would like to share through food first because food is universal language, right?
+                        Everyone
+                        loves to eat! I want to show that Indonesian food is not just nasi goreng and rendang - we have
+                        so
+                        many different foods from different islands. Like gado-gado, sate, gudeg, pempek... each region
+                        has
+                        special dishes.
+                    </span>
                     Maybe I can make Instagram account or YouTube channel to show how to cook Indonesian food with
                     ingredients you can find in Australian supermarket. Because many Indonesian recipes online use
                     ingredients that very hard to find here, so I want to make it practical for people living in
@@ -259,12 +279,16 @@
                     park, or I hear music from street and I follow the sound. But this is not... how do you say...
                     reliable way?
                     I try to search on internet for "Australian festivals" or "traditional events Melbourne" - I live in
-                    Melbourne - but websites are very confusing for me. They have calendar views that I cannot see well,
-                    or small text with dates and times. Many times I find information after event already finish!
-                    For music events, sometimes I find things on radio. I listen to ABC Classic or some local radio
-                    stations, and they announce concerts or festivals. This is better for me because I can hear the
-                    information. But they don't always give... complete information? Like, they say "festival this
-                    weekend" but not exactly where or how to buy tickets.
+                    Melbourne - but websites are very confusing for me.
+                    <span class="interactive-highlight-stories" data-card="As a visually impaired person interested in Australian culture, I want event information presented in accessible formats with audio descriptions and screen reader compatibility, so that I can discover and participate in traditional cultural events.
+">
+                        They have calendar views that I cannot see well,
+                        or small text with dates and times. Many times I find information after event already finish!
+                        For music events, sometimes I find things on radio. I listen to ABC Classic or some local radio
+                        stations, and they announce concerts or festivals. This is better for me because I can hear the
+                        information. But they don't always give... complete information? Like, they say "festival this
+                        weekend" but not exactly where or how to buy tickets.
+                    </span>
                     Theater events are even more difficult! I want to go to traditional Australian plays or Aboriginal
                     performances, but ticket websites are... nightmare for me. Small text, complicated booking systems,
                     and I never know if they have audio description for blind people.
@@ -314,12 +338,17 @@
                     websites have tiny text and when I try to zoom, everything becomes... messy? Words go outside the
                     page, buttons disappear. This is very frustrating.
                     Colors are so important too! Dark text on light background is best for me. But many websites use
-                    gray text on white, or white text on light colors - I cannot read this at all! High contrast is...
-                    how do you say... essential?
-                    I really need websites that work with screen reader. My phone has voice function that reads website
-                    to me, but many websites are not made for this. The voice reads all wrong - it reads menu, then
-                    advertisements, then random buttons, then finally maybe the information I want. Good websites should
-                    have... proper structure? So voice reads in logical order.
+                    gray text on white, or white text on light colors - I cannot read this at all!
+                    <span class="interactive-highlight-stories"
+                        data-card="As someone with visual impairments, I want websites with high contrast design and proper screen reader compatibility, so that I can access cultural information independently without assistance.">
+                        High contrast is...
+                        how do you say... essential?
+                        I really need websites that work with screen reader. My phone has voice function that reads
+                        website
+                        to me, but many websites are not made for this. The voice reads all wrong - it reads menu, then
+                        advertisements, then random buttons, then finally maybe the information I want. Good websites
+                        should
+                        have... proper structure? So voice reads in logical order.</span>
                     Simple navigation is very important! I get lost easily if there are too many menus and buttons
                     everywhere. I like when main sections are clear - like "Events", "About", "Contact" - not
                     complicated words I don't understand.
@@ -445,14 +474,20 @@
                     "educational" stuff usually sucks. They try to cram way too much information on one screen, and
                     there's always like fifty different menus and tabs and things. I just want to find what I need
                     quickly, not spend ages clicking through stuff.
-                    Banking apps are the worst though. Mum made me download the CommBank app and it's so confusing -
-                    like, why do I need to go through three different screens just to check my balance?
-                    I guess what makes apps easy for me is when they're designed like... you know, like games almost?
-                    Big, colorful buttons, not heaps of reading, and everything happens quickly. The apps I use most are
-                    the ones where I can just open them up and immediately see what I want or do what I need to do.
-                    So yeah, if someone made an app about traditional food, it'd need to be more like YouTube or
-                    Instagram - simple and visual - rather than like those boring educational websites teachers always
-                    make us use.
+                    <span class="interactive-highlight-stories"
+                        data-card="As a teenager comfortable with social media apps but not complex websites, I want educational platforms designed with large buttons, minimal text, and intuitive navigation similar to popular apps, so that I can focus on learning rather than struggling with the interface.">
+                        Banking apps are the worst though. Mum made me download the CommBank app and it's so confusing -
+                        like, why do I need to go through three different screens just to check my balance?
+                        I guess what makes apps easy for me is when they're designed like... you know, like games
+                        almost?
+                        Big, colorful buttons, not heaps of reading, and everything happens quickly. The apps I use most
+                        are
+                        the ones where I can just open them up and immediately see what I want or do what I need to do.
+                        So yeah, if someone made an app about traditional food, it'd need to be more like YouTube or
+                        Instagram - simple and visual - rather than like those boring educational websites teachers
+                        always
+                        make us use.
+                    </span>
                 </p>
             </div>
         </section>
